Incorporacion de Capas de Logica, Unidad de Trabajo y Repositorio al Proyecto.

--- a/AdSanare.MVC/Views/Persona/Create.cshtml
+++ b/AdSanare.MVC/Views/Persona/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model AdSanare.MVC.Models.Persona
+﻿@model AdSanare.Entities.Persona
 <form asp-antiforgery="true" asp-action="Create" method="post">
     <div class="form-group">
         <label asp-for="Nombre"></label>
