--- a/AdSanare.MVC/Views/Persona/Index.cshtml
+++ b/AdSanare.MVC/Views/Persona/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<AdSanare.MVC.Models.Persona>
+﻿@model List<AdSanare.Entities.Persona>
 
 
 <div class="col-md-12">
@@ -22,7 +22,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (Persona p in Model)
+                    @foreach (var p in Model)
                     {
                         <tr>
                             <td>
