--- a/AdSanare.MVC/Views/Home/Index.cshtml
+++ b/AdSanare.MVC/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center textoPrincipal">
+    <h1 class="display-4">Bienvenido a AdSanare</h1>
+    <p>Sistema de gestión hospitalaria.</p>
 </div>
