Agregado de métodos Delete y Edit en  PersonaController y corrección de las vistas.

--- a/AdSanare.MVC/Views/Shared/_LayoutAdSanare.cshtml
+++ b/AdSanare.MVC/Views/Shared/_LayoutAdSanare.cshtml
@@ -50,7 +50,7 @@
                     <a href=""><i class="fas fa-user-cog"></i>Adm. de usuarios</a>
                 </li>
                 <li>
-                    <a asp-area="" asp-controller="Persona" asp-action="Index"><i class="fas fa-user-cog"></i>Personas</a>
+                    <a asp-area="" asp-controller="Persona" asp-action="Index"><i class="fas fa-user-cog"></i>Pacientes</a>
                 </li>
 
             </ul>
@@ -62,7 +62,7 @@
             </main>
         </div>
         <footer class="footer text-muted">
-            <div class="footer">
+            <div class="text-footer">
                 &copy; 2020 - AdSanare.
             </div>
         </footer>
