Corrección Edit y Update de Persona

--- a/AdSanare.MVC/Views/Persona/Details.cshtml
+++ b/AdSanare.MVC/Views/Persona/Details.cshtml
@@ -10,7 +10,7 @@
                 <div class="box-body">
                     <form asp-antiforgery="true" asp-action="Edit" method="post">
                         <div class="row" hidden="hidden">
-                            <label asp-for="Id"></label>
+                            <input type="text" asp-for="Id"/>
                         </div>
                         <div class="form-row">
                             <div class="form-group col-md-12">
