Cambios en logica, repositorio y metodos persona

--- a/AdSanare.MVC/Views/Persona/Index.cshtml
+++ b/AdSanare.MVC/Views/Persona/Index.cshtml
@@ -43,7 +43,7 @@
                                     @Html.DisplayFor(modelItem => p.FechaNacimiento)
                                 </td>
                                 <td align="center">
-                                    <a href="@Url.Action("Details", "Persona", new { id = p.Id})" class="btn btn-primary btn-sm" role="button">
+                                    <a href="@Url.Action("Edit", "Persona", new { id = p.Id})" class="btn btn-primary btn-sm" role="button">
                                         <i class="fa fa-pencil-square-o"></i> Editar
                                     </a>
                                     &nbsp;
