Agregué el proyecto AdSanare.Seguridad con Identity

--- a/AdSanare.MVC/Views/Shared/_LayoutAdSanare.cshtml
+++ b/AdSanare.MVC/Views/Shared/_LayoutAdSanare.cshtml
@@ -44,6 +44,9 @@
                     <a href=""><i class="fas fa-home"></i>Home</a>
                 </li>
                 <li>
+                    <a href=""><i class="fas fa-sign-in-alt"></i>Login</a>
+                </li>
+                <li>
                     <a href=""><i class="fas fa-clipboard"></i>Historia clínica</a>
                 </li>
                 <li>
