--- a/AdSanare.Core/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/AdSanare.Core/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<Usuario> SignInManager
+﻿@using AdSanare.Entities;
+@inject SignInManager<Usuario> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
