--- a/AdSanare.Core/Views/_ViewImports.cshtml
+++ b/AdSanare.Core/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using AdSanare.Core
 @using AdSanare.Core.Models
-@using AdSanare.Core.Areas.Identity.Data;
+@using AdSanare.Entities;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
