--- a/AdSanare.Core/Views/_ViewImports.cshtml
+++ b/AdSanare.Core/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using AdSanare.Core
 @using AdSanare.Core.Models
 @using AdSanare.Entities;
+@using Microsoft.AspNetCore.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
