--- a/AdSanare.Core/Views/Administration/EditRole.cshtml
+++ b/AdSanare.Core/Views/Administration/EditRole.cshtml
@@ -47,8 +47,8 @@
             }
         </div>
         <div class="card-footer">
-            <a href="#" class="btn btn-primary">Agregar usuario</a>
-            <a href="#" class="btn btn-primary">Eliminar usuario</a>
+            <a asp-action="EditUsersInRole" asp-controller="administration" 
+            asp-route-roleId="@Model.Id" class="btn btn-primary">Agregar o eliminar usuarios</a>
         </div>
     </div>
 </form>
