--- a/AdSanare.Core/Views/Persona/_ListaPersonas.cshtml
+++ b/AdSanare.Core/Views/Persona/_ListaPersonas.cshtml
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div class="card-body table-responsive">
-        <table class="table table-bordered table-hover">
+        <table class="table table-bordered table-hover" id="listadoPacientes">
             <thead class="thead-light">
                 <tr>
                     <th scope="col">Nombre</th>
@@ -24,29 +24,26 @@
             <tbody>
                 @foreach (var p in Model)
                 {
-    <tr>
-        <td hidden="hidden">
-            @Html.DisplayFor(modelItem => p.Id)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => p.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => p.Apellido)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => p.Documento)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => p.FechaNacimiento)
-        </td>
-        <td align="center">
-            <a href="#" onclick="VerPaciente(@p.Id)" data-toggle="modal" data-target="#detalle" title="Ver Paciente" class="btn btn-info btn-xs"><i class="fa fa-search"></i></a>
-            <a href="@Url.Action("Edit", "Persona", new { id = p.Id})" title="Editar Paciente" class="btn btn-success btn-xs"><i class="fa fa-edit"></i></a>
-            <a href="@Url.Action("Delete", "Persona", new { id = p.Id })" title="Borrar Paciente" class="btn btn-danger btn-xs"><i class="fa fa-trash"></i></a>
-        </td>
-    </tr>
-}
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => p.Nombre)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => p.Apellido)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => p.Documento)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => p.FechaNacimiento)
+                        </td>
+                        <td align="center">
+                            <a href="#" onclick="VerPaciente(@p.Id)" data-toggle="modal" data-target="#detalle" title="Ver Paciente" class="btn btn-info btn-xs"><i class="fa fa-search"></i></a>
+                            <a href="@Url.Action("Edit", "Persona", new { id = p.Id})" title="Editar Paciente" class="btn btn-success btn-xs"><i class="fa fa-edit"></i></a>
+                            <a href="@Url.Action("Delete", "Persona", new { id = p.Id })" title="Borrar Paciente" class="btn btn-danger btn-xs"><i class="fa fa-trash"></i></a>
+                        </td>
+                    </tr>
+                }
             </tbody>
         </table>
     </div>
@@ -60,6 +57,18 @@
     </div>
 </div>
 <script type="text/javascript">
+    $(document).ready(function () {
+        $('#listadoPacientes').DataTable({
+            "columnDefs": [{
+                "searchable": false,
+                "orderable": false,
+                "targets": 4
+            }],
+            "language": {
+                'url': '@Url.Content("~/lib/arg.json")'
+            }
+        });
+    });
     function VerPaciente(Id) {
         var url = "/Persona/Details?id=" + Id;
         $("#detalleBody").load(url, function () {
