--- a/AdSanare.Core/Views/Shared/Main/_Scripts.cshtml
+++ b/AdSanare.Core/Views/Shared/Main/_Scripts.cshtml
@@ -1,3 +1,4 @@
 ﻿<script src="~/js/jquery.min.js"></script>
 <script src="~/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/adminlte.min.js"></script>
+<script src="~/js/jquery.dataTables.min.js"></script>
