--- a/AdSanare.Core/Views/Shared/Main/_Styles.cshtml
+++ b/AdSanare.Core/Views/Shared/Main/_Styles.cshtml
@@ -1,3 +1,4 @@
 ﻿<link rel="stylesheet" href="~/css/all.min.css">
 <link rel="stylesheet" href="~/css/adminlte.min.css">
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+<link href="~/css/jquery.dataTables.min.css" rel="stylesheet">
