--- a/AdSanare.Core/Views/Shared/Main/_MainNavigation.cshtml
+++ b/AdSanare.Core/Views/Shared/Main/_MainNavigation.cshtml
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a asp-controller="Persona" asp-action="Index" class="nav-link @Url.MakeActiveClass("persona","index")">
+                        <a asp-controller="Paciente" asp-action="Index" class="nav-link @Url.MakeActiveClass("paciente","index")">
                             <i class="fas fa-user-nurse"></i>
                             <p>
                                 Pacientes
