--- a/AdSanare.Core/Views/Shared/_Layout.cshtml
+++ b/AdSanare.Core/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                     <a href=""><i class="fas fa-user-cog"></i>Adm. de usuarios</a>
                 </li>
                 <li>
-                    <a asp-area="" asp-controller="Persona" asp-action="Index"><i class="fas fa-user-cog"></i>Pacientes</a>
+                    <a asp-area="" asp-controller="Paciente" asp-action="Index"><i class="fas fa-user-cog"></i>Pacientes</a>
                 </li>
 
             </ul>
