--- a/AdSanare.Core/Views/Paciente/Edit.cshtml
+++ b/AdSanare.Core/Views/Paciente/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model AdSanare.Entities.Persona
+﻿@model AdSanare.Entities.Paciente
     <div class="container-fluid">
         <div class="card card-primary">
             <div class="card-header">
@@ -28,19 +28,24 @@
                         <span class="text-danger" asp-validation-for="FechaNacimiento"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="ObraSocial"></label>
-                        <input class="form-control" asp-for="ObraSocial">
-                        <span class="text-danger" asp-validation-for="ObraSocial"></span>
+                        <label asp-for="Sexo"></label>
+                        <input class="form-control" asp-for="Sexo">
+                        <span class="text-danger" asp-validation-for="Sexo"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="EstadoCivil"></label>
+                        <input class="form-control" asp-for="EstadoCivil">
+                        <span class="text-danger" asp-validation-for="EstadoCivil"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Telefono"></label>
+                        <input class="form-control" asp-for="Telefono">
+                        <span class="text-danger" asp-validation-for="Telefono"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="ObraSocialNumero"></label>
                         <input class="form-control" asp-for="ObraSocialNumero">
                         <span class="text-danger" asp-validation-for="ObraSocialNumero"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Diagnostico"></label>
-                        <input class="form-control" asp-for="Diagnostico">
-                        <span class="text-danger" asp-validation-for="Diagnostico"></span>
                     </div>
                 </div>
                 <div class="card-footer">
