--- a/AdSanare.Core/Views/Shared/Main/_TopNavigation.cshtml
+++ b/AdSanare.Core/Views/Shared/Main/_TopNavigation.cshtml
@@ -6,9 +6,7 @@
     </ul>
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-            </form>
+            <a asp-controller="Home" asp-action="Logout" class="btn btn-block bg-gradient-danger btn-sm">Logout <i class="fas fa-sign-out-alt"></i></a>
         </li>
     </ul>
 </nav>
