--- a/AdSanare.Core/Views/Shared/Main/_MainNavigation.cshtml
+++ b/AdSanare.Core/Views/Shared/Main/_MainNavigation.cshtml
@@ -1,4 +1,5 @@
 ﻿@using static AdSanare.Core.Helper.NavigationIndicatorHelper;
+@inject RoleManager<IdentityRole> roleManager;
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <a href="~/Home" class="brand-link">
         <img src="~/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
@@ -34,22 +35,25 @@
                             </p>
                         </a>
                     </li>
-                    <li class="nav-item ">
-                        <a asp-controller="Administration" asp-action="ListRoles" class="nav-link @Url.MakeActiveClass("administration","listroles")">
-                            <i class="fas fa-user-tag"></i>
-                            <p>
-                                Roles
-                            </p>
-                        </a>
-                    </li>
-                    <li class="nav-item ">
-                        <a asp-controller="Usuarios" asp-action="Index" class="nav-link @Url.MakeActiveClass("usuarios","index")">
-                            <i class="fas fa-users-cog"></i>
-                            <p>
-                                Usuarios
-                            </p>
-                        </a>
-                    </li>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <li class="nav-item ">
+                            <a asp-controller="Administration" asp-action="ListRoles" class="nav-link @Url.MakeActiveClass("administration","listroles")">
+                                <i class="fas fa-user-tag"></i>
+                                <p>
+                                    Roles
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item ">
+                            <a asp-controller="Usuarios" asp-action="Index" class="nav-link @Url.MakeActiveClass("usuarios","index")">
+                                <i class="fas fa-users-cog"></i>
+                                <p>
+                                    Usuarios
+                                </p>
+                            </a>
+                        </li>
+                    }
                 }
             </ul>
         </nav>
