--- a/AdSanare.Core/Areas/Identity/Pages/Account/Login.cshtml
+++ b/AdSanare.Core/Areas/Identity/Pages/Account/Login.cshtml
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="~/css/adminlte.min.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
-<body class="hold-transition login-page">
+<body class="hold-transition login-page" style="background-image: url(/images/fondo.jpg);background-size:cover;background-repeat:no-repeat;background-position: center;">
     <div class="login-box">
         <div class="login-logo">
         </div>
