--- a/AdSanare.Core/Views/Paciente/Details.cshtml
+++ b/AdSanare.Core/Views/Paciente/Details.cshtml
@@ -11,37 +11,37 @@
         </div>
         <div class="form-group">
             <label asp-for="Apellido"></label>
-            <input class="form-control" asp-for="Apellido">
+            <input disabled class="form-control" asp-for="Apellido">
             <span class="text-danger" asp-validation-for="Apellido"></span>
         </div>
         <div class="form-group">
             <label asp-for="Documento"></label>
-            <input class="form-control" asp-for="Documento">
+            <input disabled class="form-control" asp-for="Documento">
             <span class="text-danger" asp-validation-for="Documento"></span>
         </div>
         <div class="form-group">
             <label asp-for="FechaNacimiento"></label>
-            <input class="form-control" asp-for="FechaNacimiento">
+            <input disabled class="form-control" asp-for="FechaNacimiento">
             <span class="text-danger" asp-validation-for="FechaNacimiento"></span>
         </div>
         <div class="form-group">
             <label asp-for="Sexo"></label>
-            <input class="form-control" asp-for="Sexo">
+            <input disabled class="form-control" asp-for="Sexo">
             <span class="text-danger" asp-validation-for="Sexo"></span>
         </div>
         <div class="form-group">
             <label asp-for="EstadoCivil"></label>
-            <input class="form-control" asp-for="EstadoCivil">
+            <input disabled class="form-control" asp-for="EstadoCivil">
             <span class="text-danger" asp-validation-for="EstadoCivil"></span>
         </div>
         <div class="form-group">
             <label asp-for="Telefono"></label>
-            <input class="form-control" asp-for="Telefono">
+            <input disabled class="form-control" asp-for="Telefono">
             <span class="text-danger" asp-validation-for="Telefono"></span>
         </div>
         <div class="form-group">
             <label asp-for="ObraSocialNumero"></label>
-            <input class="form-control" asp-for="ObraSocialNumero">
+            <input disabled class="form-control" asp-for="ObraSocialNumero">
             <span class="text-danger" asp-validation-for="ObraSocialNumero"></span>
         </div>
     </div>
