--- a/AdSanare.Core/Views/Shared/Main/_MainNavigation.cshtml
+++ b/AdSanare.Core/Views/Shared/Main/_MainNavigation.cshtml
@@ -58,7 +58,14 @@
                             </li>
                         </ul>
                     </li>
-
+                    <li class="nav-item ">
+                        <a asp-controller="Servicio" asp-action="Index" class="nav-link @Url.MakeActiveClass("servicio","index")">
+                            <i class="fas fa-address-card"></i>
+                            <p>
+                                Servicios
+                            </p>
+                        </a>
+                    </li>
                     @if (User.IsInRole("Admin"))
                     {
                         <li class="nav-item ">
